edit part taxons

--- a/app/views/factory/admin/product_part_taxons/_base/_part_form.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_base/_part_form.html.erb
@@ -1,3 +1,5 @@
 <%= form_with theme: nil, model: product_part_taxon, url: { action: 'update', id: product_part_taxon.id }, data: { controller: 'input' } do |f| %>
-  <%= f.collection_check_boxes :part_ids, product_part_taxon.part_taxon.parts, :id, :name, {}, { data: { action: 'input#form' } } %>
+  <div class="labels">
+    <%= f.collection_check_boxes :part_ids, product_part_taxon.part_taxon.products, :id, :name, {}, { data: { action: 'input#form' } } %>
+  </div>
 <% end %>
