--- a/app/views/factory/admin/product_part_taxons/_index/_breadcrumb.html.erb
+++ b/app/views/factory/admin/product_part_taxons/_index/_breadcrumb.html.erb
@@ -1,6 +1,7 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
     <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
+    <li><span class="px-3"><%= @product.name %></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
