--- a/app/views/factory/admin/product_taxons/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_index/_index_thead.html.erb
@@ -3,3 +3,4 @@
 <th><%= Factory::ProductTaxon.human_attribute_name(:scene_id) %></th>
 <th>已上架</th>
 <th><%= Factory::ProductTaxon.human_attribute_name(:enabled) %></th>
+<th><%= Factory::ProductTaxon.human_attribute_name(:partial) %></th>
