--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -9,7 +9,7 @@
         <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-success') do %>
           <i class="fa-light fa-shopping-cart"></i>
         <% end %>
-        <%= link_to({ controller: 'provideds', production_id: model.id }, aria: { label: t('factory.admin.provideds.index.title') }, class: 'button is-small is-rounded is-danger') do %>
+        <%= link_to({ controller: 'part_providers', production_id: model.id }, aria: { label: t('factory.admin.part_providers.index.title') }, class: 'button is-small is-rounded is-danger') do %>
           <i class="fa-light fa-hand-holding"></i>
         <% end %>
         <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-warning') do %>
