--- a/app/views/factory/admin/part_providers/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_providers/_index/_index_tbody.html.erb
@@ -1,5 +1,5 @@
 <td><%= model.provider.name %></td>
-<td><%= model.export_price %></td>
+<td><%= model.cost_price %></td>
 <td>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :verified, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
