--- a/app/views/factory/admin/part_providers/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/part_providers/_index/_index_thead.html.erb
@@ -1,5 +1,5 @@
 <th><%= Factory::PartProvider.human_attribute_name(:provider_id) %></th>
-<th><%= Factory::PartProvider.human_attribute_name(:export_price) %></th>
+<th><%= Factory::PartProvider.human_attribute_name(:cost_price) %></th>
 <th><%= Factory::PartProvider.human_attribute_name(:verified) %></th>
 <th><%= Factory::PartProvider.human_attribute_name(:selected) %></th>
 <th><%= Factory::PartProvider.human_attribute_name(:created_at) %></th>
