not compute price

--- a/app/views/factory/admin/part_providers/search.turbo_stream.erb
+++ b/app/views/factory/admin/part_providers/search.turbo_stream.erb
@@ -1,1 +1,1 @@
-<%= turbo_stream.update 'providers_content', partial: 'provider_options', collection: @organs, as: :model %>
+<%= turbo_stream.update 'productions_content', partial: 'production_options', collection: @productions, as: :model %>
