--- a/app/views/factory/admin/part_providers/_base/_production_search.html.erb
+++ b/app/views/factory/admin/part_providers/_base/_production_search.html.erb
@@ -1,15 +1,15 @@
 <div class="field is-horizontal">
   <div class="field-label is-normal">
-    <label class="label">供应商</label>
+    <label class="label">供应产品</label>
   </div>
   <div class="field-body">
-    <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search') %>" data-typer-method-value="post">
-      <%= f.hidden_field :provider_id, data: { typer_target: 'value' } %>
+    <div class="panel" data-controller="typer" data-typer-url-value="<%= url_for(action: 'search', organ_id: params[:organ_id]) %>" data-typer-method-value="post">
+      <%= f.hidden_field :upstream_production_id, data: { typer_target: 'value' } %>
       <div class="control has-icons-left">
         <%= search_field_tag 'name-like', nil, class: 'input', placeholder: '搜索', data: { typer_target: 'input' } %>
         <span class="icon is-left"><i class="fa-light fa-search"></i></span>
       </div>
-      <div class="panel" id="providers_content"></div>
+      <div class="panel" id="productions_content"></div>
     </div>
   </div>
 </div>
