get upstream production

--- a/app/views/factory/admin/part_providers/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/part_providers/_index/_index_thead.html.erb
@@ -1,4 +1,8 @@
 <th><%= Factory::PartProvider.human_attribute_name(:provider_id) %></th>
+<th>
+  <p><%= Factory::PartProvider.human_attribute_name(:upstream_production_id) %></p>
+  <p><%= Factory::PartProvider.human_attribute_name(:upstream_product_id) %></p>
+</th>
 <th><%= Factory::PartProvider.human_attribute_name(:cost_price) %></th>
 <th><%= Factory::PartProvider.human_attribute_name(:verified) %></th>
 <th><%= Factory::PartProvider.human_attribute_name(:selected) %></th>
