--- a/app/views/factory/admin/part_providers/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/part_providers/_index/_index_tbody.html.erb
@@ -1,4 +1,7 @@
 <td><%= model.provider.name %></td>
+<td>
+  <p><%= model.upstream_production.name %></p>
+</td>
 <td><%= model.cost_price %></td>
 <td>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
