--- a/app/views/factory/admin/product_taxons/_base/_production.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_production.html.erb
@@ -20,7 +20,7 @@
     <% part_provider = model.part_providers.default_where(default_params).take %>
     <% if part_provider %>
       <i class="fa-light fa-check has-text-success"></i>
-      <%= button_to({ controller: 'parts', action: 'destroy', id: part_provider.part_id }, method: :delete, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ controller: 'productions', action: 'destroy', product_id: part_provider.product_id, id: part_provider.production_id }, method: :delete, aria: { label: t('.provide') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-times"></i>
       <% end %>
     <% else %>
