breadcrumb for productions action

--- a/app/views/factory/admin/product_taxons/_productions/_breadcrumb.html.erb
+++ b/app/views/factory/admin/product_taxons/_productions/_breadcrumb.html.erb
@@ -1,7 +1,13 @@
 <div class="breadcrumb has-succeeds-separator">
   <ul>
-    <li><%= link_to t('factory.admin.product_taxons.index.title'), { controller: 'product_taxons' } %></li>
-    <li><%= link_to @product_taxon.factory_taxon.name, { controller: 'product_taxons', id: @product_taxon.factory_taxon_id } %></li>
+    <li><%= link_to t('factory.admin.products.index.title'), { controller: 'products' } %></li>
+    <li>
+      <%= link_to({ controller: 'product_taxons', id: @product_taxon.factory_taxon_id }) do %>
+        <span><%= @product_taxon.name %></span>
+        <span class="has-text-grey">（<%= @product_taxon.factory_taxon.name %>）</span>
+      <% end %>
+    </li>
+    <li><span></span></li>
     <li class="is-active"><%= t('.title') %></li>
   </ul>
 </div>
