--- a/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_tbody.html.erb
@@ -8,6 +8,7 @@
     <span class="tag"><%= model.productions_count %></span>
   </div>
 </td>
+<td><%= model.organ.name %></td>
 <td>
   <table class="table is-borderless">
   <% model.parts.each do |part| %>
