--- a/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
+++ b/app/views/factory/admin/product_taxons/_base/_index_thead.html.erb
@@ -1,4 +1,4 @@
 <th><%= Factory::Product.human_attribute_name(:name) %></th>
-<td></td>
+<th><%= Factory::Product.human_attribute_name(:organ_id) %></th>
 <th><%= Factory::Product.human_attribute_name(:parts) %></th>
 <th></th>
