--- a/app/views/factory/admin/production_items/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_thead.html.erb
@@ -2,4 +2,4 @@
 <th><%= Factory::ProductionItem.human_attribute_name(:qr_code) %></th>
 <th><%= Factory::ProductionItem.human_attribute_name(:qr_file) %></th>
 <th><%= Factory::ProductionItem.human_attribute_name(:state) %></th>
-<th><%= Factory::ProductionItem.human_attribute_name(:produced_at) %></th>
+<th><%= Factory::ProductionItem.human_attribute_name(:came_at) %></th>
