--- a/app/views/factory/admin/products/_qr_form.html.erb
+++ b/app/views/factory/admin/products/_qr_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: @product, url: { action: 'update' } do |f| %>
-  <%= render 'error_messages', target: @product %>
+  <%= render 'error_messages', target: f.object %>
   <%= f.text_field :qr_prefix %>
   <%= f.submit %>
 <% end %>
