--- a/app/views/factory/admin/production_plans/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/production_plans/_index/_index_thead.html.erb
@@ -1,5 +1,7 @@
-<th><%= Factory::ProductionPlan.human_attribute_name(:produce_plan_id) %></th>
-<th><%= Factory::ProductionPlan.human_attribute_name(:produce_on) %></th>
+<th>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:produce_plan_id) %></p>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:produce_on) %></p>
+</th>
 <th>
   <p><%= Factory::ProductionPlan.human_attribute_name(:start_at) %></p>
   <p><%= Factory::ProductionPlan.human_attribute_name(:finish_at) %></p>
@@ -8,4 +10,10 @@
 <th>
   <p><%= Factory::ProductionPlan.human_attribute_name(:planned_count) %></p>
   <p><%= Factory::ProductionPlan.human_attribute_name(:production_items_count) %></p>
+</th>
+<th>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:station_id) %></p>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:building_id) %></p>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:room_id) %></p>
+  <p><%= Factory::ProductionPlan.human_attribute_name(:grid_id) %></p>
 </th>
