--- a/app/views/factory/admin/production_plans/_index/_index_thead.html.erb
+++ b/app/views/factory/admin/production_plans/_index/_index_thead.html.erb
@@ -11,9 +11,4 @@
   <p><%= Factory::ProductionPlan.human_attribute_name(:planned_count) %></p>
   <p><%= Factory::ProductionPlan.human_attribute_name(:production_items_count) %></p>
 </th>
-<th>
-  <p><%= Factory::ProductionPlan.human_attribute_name(:station_id) %></p>
-  <p><%= Factory::ProductionPlan.human_attribute_name(:building_id) %></p>
-  <p><%= Factory::ProductionPlan.human_attribute_name(:room_id) %></p>
-  <p><%= Factory::ProductionPlan.human_attribute_name(:grid_id) %></p>
-</th>
+<th><%= Factory::ProductionPlan.human_attribute_name(:station_id) %></th>
