--- a/app/views/factory/buy/carts/_list/_index_tfoot.html+phone.erb
+++ b/app/views/factory/buy/carts/_list/_index_tfoot.html+phone.erb
@@ -4,7 +4,7 @@
       <%= f.hidden_field :ids, data: { check_target: 'ids' } %>
       <%= button_tag data: { action: 'check#doSubmit' }, class: 'weui-btn_cell weui-btn_cell-warn py-4' do %>
         <i class="fa-light fa-credit-card"></i>
-        <span><%= t('.pay') %></span>
+        <span class="pl-1"><%= t('.pay') %></span>
       <% end %>
     <% end %>
   </div>
