--- a/app/views/factory/buy/carts/_list/_index_tfoot.html.erb
+++ b/app/views/factory/buy/carts/_list/_index_tfoot.html.erb
@@ -3,7 +3,8 @@
     <th colspan="4"></th>
     <th>
       <%= button_to({ controller: 'orders', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success') do %>
-        <i class="fa-light fa-credit-card"></i><%= t('.pay') %>
+        <i class="fa-light fa-credit-card"></i>
+        <span class="pl-1"><%= t('.pay') %></span>
       <% end %>
     </th>
   </tr>
