--- a/app/views/factory/buy/trade_items/_index/_index_tfoot.html.erb
+++ b/app/views/factory/buy/trade_items/_index/_index_tfoot.html.erb
@@ -5,7 +5,8 @@
     <th colspan="3"></th>
     <th id="payment_button">
       <%= button_to({ controller: 'payments', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success') do %>
-        <i class="fa-light fa-credit-card"></i><%= t('.pay') %>
+        <i class="fa-light fa-credit-card"></i>
+        <span class="pl-1"><%= t('.pay') %></span>
       <% end %>
     </th>
   </tr>
