--- a/app/views/factory/admin/base/_nav.html.erb
+++ b/app/views/factory/admin/base/_nav.html.erb
@@ -1,4 +1,5 @@
 <aside class="menu is-dark" style="height: 100%">
+  <%= render 'brand_nav' %>
   <%= render 'factory_nav' %>
   <%= render 'trade_nav' %>
 </aside>
