--- a/app/views/factory/admin/production_items/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tbody.html.erb
@@ -4,4 +4,4 @@
   <%= image_tag model.qrcode_url, class: 'image is-32x32' %>
 </td>
 <td><%= model.state_i18n %></td>
-<td><time data-controller="time"><%= model.came_at.to_fs(:iso8601) if model.came_at %></time></td>
+<td><time data-controller="time"><%= model.came_at&.to_fs(:iso8601) %></time></td>
