--- a/app/views/factory/me/production_items/_qrcode/_production_item.html.erb
+++ b/app/views/factory/me/production_items/_qrcode/_production_item.html.erb
@@ -13,6 +13,13 @@
       <span class="weui-form-preview__value"><time data-controller="time"><%= @production_item.came_at&.to_fs(:iso8601) %></time></span>
     </div>
     <div class="weui-form-preview__item">
+      <label class="weui-form-preview__label"><%= Factory::ProductionItem.human_attribute_name(:room_id) %></label>
+      <span class="weui-form-preview__value">
+        <span><%= @production_item.room&.code %></span>
+        <span class="has-text-grey">(<%= @production_item.room_id %>)</span>
+      </span>
+    </div>
+    <div class="weui-form-preview__item">
       <label class="weui-form-preview__label"><%= Factory::ProductionItem.human_attribute_name(:grid_id) %></label>
       <span class="weui-form-preview__value">
         <span><%= @production_item.grid&.code %></span>
