add some actions for phone

--- a/app/views/factory/admin/production_items/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/production_items/_index/_index_tr.html.erb
@@ -2,7 +2,7 @@
   <%= yield %>
   <td>
     <span data-show-target="item" style="visibility: hidden">
-      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { confirm: t('.confirm') }, aria: { label: t('.print') }, class: 'button is-small is-rounded is-light') do %>
+      <%= button_to({ action: 'print', id: model.id }, method: :patch, data: { confirm: t('.confirm') }, aria: { label: t('factory.admin.production_items.print.title') }, class: 'button is-small is-rounded is-light') do %>
         <i class="fa-light fa-print"></i>
       <% end %>
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
