--- a/app/views/factory/admin/production_plans/_actions.html.erb
+++ b/app/views/factory/admin/production_plans/_actions.html.erb
@@ -1,3 +1,8 @@
+<%= link_to({ controller: 'production_items', production_plan_id: model.id }, class: 'weui-actionsheet__cell') do %>
+  <i class="fa-light fa-list-timeline"></i>
+  <span><%= t('factory.admin.production_items.index.title') %></span>
+  <span class="has-text-grey">（<%= model.production_items_count %>）</span>
+<% end %>
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-light fa-pencil"></i>
   <span><%= t('.edit') %></span>
