--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -1,7 +1,12 @@
-<%= button_to({ action: 'print', id: model.id }, method: :patch, form: { data: { turbo_confirm: t('.confirm') }, class: 'weui-actionsheet__cell' }) do %>
+<div
+  data-controller="mini-program"
+  data-mini-program-url-value="/pages/print/index?url=<%= url_for(action: 'print', id: model.id, only_path: false) %>"
+>
+<%= button_to({ action: 'print', id: model.id }, method: :patch, data: { action: 'mini-program#link' }, form: { class: 'weui-actionsheet__cell' }) do %>
   <i class="fa-light fa-print"></i>
   <span><%= t('factory.admin.production_items.print.title') %></span>
 <% end %>
+</div>
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-light fa-pencil"></i>
   <span><%= t('.edit') %></span>
