--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -1,6 +1,6 @@
 <div
   data-controller="mini-program"
-  data-mini-program-url-value="/pages/print/index?url=<%= url_for(action: 'print', id: model.id, only_path: false) %>"
+  data-mini-program-url-value="/pages/print/execute/index?url=<%= url_for(action: 'print', id: model.id, only_path: false) %>"
 >
 <%= button_to({ action: 'print', id: model.id }, method: :patch, form: { data: { action: 'click->mini-program#link' }, class: 'weui-actionsheet__cell' }) do %>
   <i class="fa-light fa-print"></i>
