--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -1,13 +1,3 @@
-<div
-  data-controller="mini-program"
-  data-mini-program-url-value="/pages/print/execute/index"
-  data-mini-program-data-value="<%= { url: url_for(action: 'print_data', id: model.id, only_path: false) }.to_json %>"
->
-<%= button_to({ action: 'print', id: model.id }, method: :patch, form: { data: { action: 'click->mini-program#link' }, class: 'weui-actionsheet__cell' }) do %>
-  <i class="fa-light fa-print"></i>
-  <span><%= t('factory.admin.production_items.print.title') %></span>
-<% end %>
-</div>
 <%= link_to({ action: 'edit', id: model.id }, class: 'weui-actionsheet__cell') do %>
   <i class="fa-light fa-pencil"></i>
   <span><%= t('.edit') %></span>
@@ -16,3 +6,14 @@
   <i class="fa-light fa-trash"></i>
   <span><%= t('.destroy') %></span>
 <% end %>
+<div
+  data-controller="mini-program"
+  data-mini-program-url-value="/pages/print/execute/index"
+  data-mini-program-data-value="<%= { url: url_for(action: 'print_data', id: model.id, only_path: false) }.to_json %>"
+  class="weui-actionsheet__cell"
+>
+  <%= button_to({ action: 'print', id: model.id }, method: :patch, form: { data: { action: 'click->mini-program#link' } }) do %>
+    <i class="fa-light fa-print"></i>
+    <span><%= t('factory.admin.production_items.print.title') %></span>
+  <% end %>
+</div>
