--- a/app/views/factory/admin/production_items/_actions.html+phone.erb
+++ b/app/views/factory/admin/production_items/_actions.html+phone.erb
@@ -10,9 +10,10 @@
   data-controller="mini-program"
   data-mini-program-url-value="/pages/print/execute/index"
   data-mini-program-data-value="<%= { url: url_for(action: 'print_data', id: model.id, only_path: false) }.to_json %>"
+  data-action="click->mini-program#link"
   class="weui-actionsheet__cell"
 >
-  <%= button_to({ action: 'print', id: model.id }, method: :patch, form: { data: { action: 'click->mini-program#link' } }) do %>
+  <%= button_to({ action: 'print', id: model.id }, method: :patch) do %>
     <i class="fa-light fa-print"></i>
     <span><%= t('factory.admin.production_items.print.title') %></span>
   <% end %>
