--- a/app/views/factory/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/productions/_index/_tab_bar_cart.html.erb
@@ -1,7 +1,7 @@
 <div class="level is-flex mb-0 py-2 has-border-top">
   <div class="level-left is-flex pl-4">
     <%= link_to({ controller: 'trade/my/carts', action: 'show' }, class: 'level-item mb-0') do %>
-      <i class="fa-solid fa-bag-shopping fa-2x">
+      <i class="fa-solid fa-bag-shopping fa-2x fa-weui-badge">
         <span class="weui-badge"><%= current_cart_count %></span>
       </i>
     <% end %>
