--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -8,7 +8,7 @@
 <%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true, turbo_scroll_container: 'production_body' }) do |f| %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
-<%= form_with theme: nil, url: { controller: 'trade/my/trade_items', action: 'create' }, data: { turbo_scroll: true, turbo_scroll_container: 'production_body' }, class: 'ml-1 button_to' do |f| %>
+<%= form_with theme: nil, url: { controller: 'trade/my/trade_items', action: 'create' }, data: { turbo_scroll: true, turbo_scroll_container: 'production_body' }, class: 'button_to' do |f| %>
   <%= f.hidden_field :fetch_oneself, value: true %>
   <%= f.hidden_field :member_id, value: current_member&.id %>
   <%= f.hidden_field :good_type, value: model.class_name %>
