--- a/app/views/factory/buy/home/_cart_item.html.erb
+++ b/app/views/factory/buy/home/_cart_item.html.erb
@@ -1,7 +1,7 @@
-<%= link_to({ controller: 'trade/me/promote_goods' }, class: 'weui-cell weui-cell_access') do %>
+<%= link_to({ controller: 'trade/our/promote_goods' }, class: 'weui-cell weui-cell_access') do %>
   <div class="weui-cell__bd">
     <i class="fa-light fa-tags fa-fw has-text-primary"></i>
-    <span><%= t('trade.me.promote_goods.index.title') %></span>
+    <span><%= t('trade.our.promote_goods.index.title') %></span>
   </div>
   <div class="weui-cell__ft"></div>
 <% end %>
