--- a/app/views/factory/admin/produce_on/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/produce_on/_index/_index_tr.html.erb
@@ -1,8 +1,6 @@
 <tr data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <span data-show-target="item" style="visibility: hidden">
-    
-    </span>
+    <div data-show-target="item" style="visibility: hidden"></div>
   </td>
 </tr>
