--- a/app/views/factory/admin/scenes/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/scenes/_index/_index_tr.html.erb
@@ -1,11 +1,11 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <span data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ controller: 'produce_plans', scene_id: model.id }, class: 'button is-small is-rounded is-info') do %>
         <i class="fa-light fa-hammer"></i>
         <span><%= t('factory.admin.produce_plans.index.title') %></span>
       <% end %>
-    </span>
+    </div>
   </td>
 </tr>
