--- a/app/views/factory/panel/scenes/_index/_index_tr.html.erb
+++ b/app/views/factory/panel/scenes/_index/_index_tr.html.erb
@@ -1,7 +1,7 @@
 <tr id="tr_<%= model.id %>" data-controller="show" data-action="mouseenter->show#show mouseleave->show#hide">
   <%= yield %>
   <td>
-    <span data-show-target="item" style="visibility: hidden">
+    <div data-show-target="item" style="visibility: hidden">
       <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-info') do %>
         <i class="fa-light fa-circle-info"></i>
       <% end %>
@@ -11,6 +11,6 @@
       <%= button_to({ action: 'destroy', id: model.id }, method: :delete, data: { confirm: t('.confirm') }, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-danger') do %>
         <i class="fa-light fa-trash"></i>
       <% end %>
-    </span>
+    </div>
   </td>
 </tr>
