--- a/app/views/factory/productions/_base/_figure.html+phone.erb
+++ b/app/views/factory/productions/_base/_figure.html+phone.erb
@@ -1,12 +1,12 @@
 <div class="slide is-1by1" data-controller="slide" data-slide-debug-value="true" data-slide-circle-value="true" data-slide-duration="1s">
-<% @production.product.covers.each_with_index do |cover, index| %>
+<% model.covers.each_with_index do |cover, index| %>
   <figure class="image" data-action="touchmove->slide#move:passive touchend->slide#end:passive" data-index="<%= index %>" style="z-index: <%= index == 0 ? 1 : -1 %>">
     <% if cover.content_type.to_s.start_with?('video') %>
       <%= video_tag cover.url, controls: true %>
     <% else %>
       <%= image_tag cover %>
     <% end %>
-    <figcaption><%= index + 1 %>/<%= @production.product.covers.count %></figcaption>
+    <figcaption><%= index + 1 %>/<%= model.covers.count %></figcaption>
   </figure>
 <% end %>
 </div>
