--- a/app/views/factory/productions/show.html.erb
+++ b/app/views/factory/productions/show.html.erb
@@ -1,6 +1,6 @@
 <div class="columns">
   <div class="column">
-    <%= render 'figure' %>
+    <%= render partial: 'covers', locals: { model: @product } %>
   </div>
   <div class="column">
     <div class="box">
