--- a/app/views/factory/admin/products/_form.html.erb
+++ b/app/views/factory/admin/products/_form.html.erb
@@ -1,8 +1,8 @@
-<%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'product_taxon', node: @product.product_taxon } %>
+<%= render partial: 'com/nodes/outer_select', locals: { f: f, outer: 'product_taxon', node: f.object.product_taxon } %>
 <%= f.text_field :name, required: true %>
 <%= f.collection_select :brand_id, @brands, :id, :name, include_blank: true %>
 <%= f.number_field :profit_margin, step: 0.01 %>
 <%= f.file_field :logo %>
-<%= render 'com/attachments/list_field', target: @product.covers, f: f %>
-<%= render 'com/attachments/list_field', target: @product.images, f: f %>
+<%= render 'com/attachments/list_field', target: f.object.covers, f: f %>
+<%= render 'com/attachments/list_field', target: f.object.images, f: f %>
 <%= f.text_area :description %>
