--- a/app/views/factory/productions/_base/_cart.html.erb
+++ b/app/views/factory/productions/_base/_cart.html.erb
@@ -1,21 +1,31 @@
 <% trade_item = @cart.find_trade_item(good_id: model.id, produce_on: params[:produce_on], scene_id: params[:scene_id]) %>
 
-<%= button_to({ controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number - 1 }, class: 'mr-1', form: { data: { turbo_scroll: true, turbo_scroll_container: 'production_body' } }) do %>
-  <i class="fa-solid fa-circle-minus fa-xl has-text-dark-grey"></i>
+<%= form_with theme: nil, scope: :trade_item, url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'button_to', data: { turbo_scroll: true, turbo_scroll_container: 'production_body' } do |f| %>
+  <%= f.hidden_field :number, value: trade_item.number - 1 %>
+  <%= f.hidden_field :current_cart_id, value: @cart.id %>
+  <%= button_tag class: 'mr-1' do %>
+    <i class="fa-solid fa-circle-minus fa-xl has-text-dark-grey"></i>
+  <% end %>
 <% end if trade_item && trade_item.number > 1 %>
 <%= button_to({ controller: 'trade/my/trade_items', action: 'destroy', id: trade_item.id }, method: :delete, class: 'mr-1', form: { data: { turbo_scroll: true, turbo_scroll_container: 'production_body' } }) do %>
   <i class="fa-solid fa-circle-minus fa-xl has-text-dark-grey"></i>
 <% end if trade_item && trade_item.number <= 1 %>
 <%= form_with(theme: nil, scope: 'trade_item', url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, data: { controller: 'input', turbo_scroll: true, turbo_scroll_container: 'production_body' }) do |f| %>
+  <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= f.number_field :number, value: trade_item.number, data: { action: 'change->input#form' }, class: 'has-background-light has-text-centered', style: 'width: 30px' %>
 <% end if trade_item %>
-<%= button_to({ controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, params: { '[trade_item]number': trade_item.number + 1 }, class: 'ml-1', form: { data: { turbo_scroll: true, turbo_scroll_container: 'production_body' } }) do %>
-  <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
+<%= form_with theme: nil, scope: :trade_item, url: { controller: 'trade/my/trade_items', action: 'update', id: trade_item.id }, method: :patch, class: 'button_to', data: { turbo_scroll: true, turbo_scroll_container: 'production_body' } do |f| %>
+  <%= f.hidden_field :number, value: trade_item.number + 1 %>
+  <%= f.hidden_field :current_cart_id, value: @cart.id %>
+  <%= button_tag class: 'ml-1' do %>
+    <i class="fa-solid fa-circle-plus fa-xl has-text-dark-grey"></i>
+  <% end %>
 <% end if trade_item %>
 
 <%= form_with theme: nil, url: { controller: 'trade/my/trade_items', action: 'create' }, data: { turbo_scroll: true, turbo_scroll_container: 'production_body' }, class: 'button_to' do |f| %>
   <%= f.hidden_field :good_type, value: model.class_name %>
   <%= f.hidden_field :good_id, value: model.id %>
+  <%= f.hidden_field :current_cart_id, value: @cart.id %>
   <%= f.hidden_field :fetch_oneself, value: params[:fetch_oneself] %>
   <%= f.hidden_field :produce_on, value: params[:produce_on] %>
   <%= f.hidden_field :scene_id, value: params[:scene_id] %>
