--- a/app/views/admin/_factory_nav.html.erb
+++ b/app/views/admin/_factory_nav.html.erb
@@ -1,16 +1,16 @@
-<div class="<%= active_helper(modules: 'factory/admin', active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>" data-controller="menu">
-  <%= content_tag :div, class: 'menu-list' do %>
+<div class="<%= active_helper(modules: 'factory/admin', active: 'menu ex-accordion is-active', item: 'menu ex-accordion is-active') %>" data-controller="menu empty">
+  <a class="menu-label" data-action="menu#toggle">
+    <i class="fa-solid fa-store fa-fw"></i>
+    <span><%= t('factory.admin.title') %></span>
+    <i class="fa-solid dropdown"></i>
+  </a>
+  <div class="menu-list">
     <%= link_to t('factory.admin.products.index.title'), { controller: 'factory/admin/products' }, class: active_helper(controllers: ['products', 'product_taxons', 'product_part_taxons', 'productions', 'part_providers', 'production_plans', 'production_items'], active: 'is-active') %>
     <%# link_to t('factory.admin.parts.index.title'), { controller: 'factory/admin/parts' }, class: active_helper(controllers: ['parts', 'part_taxons', 'part_providers', 'part_plans', 'part_items'], active: 'is-active') %>
     <%= link_to t('factory.admin.scenes.index.title'), { controller: 'factory/admin/scenes' }, class: active_helper(controllers: ['scenes', 'produce_plans'], active: 'is-active') %>
     <%= link_to t('factory.admin.produce_on.index.title'), { controller: 'factory/admin/produce_on' }, class: active_helper(controllers: 'produce_on', active: 'is-active') %>
     <%= link_to t('factory.admin.brands.index.title'), { controller: 'factory/admin/brands' }, class: active_helper(controllers: 'brands', active: 'is-active') %>
     <%= link_to t('factory.admin.provides.index.title'), { controller: 'factory/admin/provides' }, class: active_helper(controllers: 'provides', active: 'is-active') %>
-    <%= link_to t('factory.admin.factory_taxons.index.title'), { controller: 'factory/admin/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') -%>
-  <% end %>
-  <a class="menu-label" data-action="menu#toggle">
-    <i class="fa-solid fa-store fa-fw"></i>
-    <span><%= t('factory.admin.title') %></span>
-    <i class="fa-solid dropdown"></i>
-  </a>
+    <%= link_to t('factory.admin.factory_taxons.index.title'), { controller: 'factory/admin/factory_taxons' }, class: active_helper(controllers: ['factory_taxons'], active: 'is-active') %>
+  </div>
 </div>
