--- a/app/views/factory/admin/productions/_index/_index_tr.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tr.html.erb
@@ -4,27 +4,27 @@
     <div data-show-target="item" style="visibility: hidden">
       <div>
         <%= link_to({ controller: 'production_plans', production_id: model.id }, aria: { label: t('factory.admin.production_plans.index.title') }, class: 'button is-small is-rounded is-info') do %>
-          <i class="fa-light fa-list-timeline"></i>
+          <i class="fa-regular fa-list-timeline"></i>
         <% end %>
         <%= link_to({ controller: 'trade_items', production_id: model.id }, aria: { label: t('factory.admin.trade_items.index.title') }, class: 'button is-small is-rounded is-success') do %>
-          <i class="fa-light fa-shopping-cart"></i>
+          <i class="fa-regular fa-shopping-cart"></i>
         <% end %>
         <%= link_to({ controller: 'part_providers', production_id: model.id }, aria: { label: t('factory.admin.part_providers.index.title') }, class: 'button is-small is-rounded is-danger') do %>
-          <i class="fa-light fa-hand-holding"></i>
+          <i class="fa-regular fa-hand-holding"></i>
         <% end %>
         <%= link_to({ controller: 'addresses', production_id: model.id }, aria: { label: t('factory.admin.addresses.index.title') }, class: 'button is-small is-rounded is-warning') do %>
-          <i class="fa-light fa-map-marker-alt"></i>
+          <i class="fa-regular fa-map-marker-alt"></i>
         <% end %>
       </div>
       <div class="mt-2">
         <%= link_to({ action: 'show', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.show') }, class: 'button is-small is-rounded is-light') do %>
-          <i class="fa-light fa-circle-info"></i>
+          <i class="fa-regular fa-circle-info"></i>
         <% end %>
         <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal', turbo_scroll: true }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
-          <i class="fa-light fa-pencil"></i>
+          <i class="fa-regular fa-pencil"></i>
         <% end %>
         <%= button_to({ action: 'destroy', id: model.id }, method: :delete, aria: { label: t('.destroy') }, class: 'button is-small is-rounded is-light', form: { data: { turbo_confirm: t('.confirm'), turbo_scroll: true } }) do %>
-          <i class="fa-light fa-trash"></i>
+          <i class="fa-regular fa-trash"></i>
         <% end %>
       </div>
     </div>
