--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -2,6 +2,7 @@
   <div class="is-several">
     <%= image_tag model.logo, class: 'image is-24x24' if model.logo.attached? %>
     <span><%= model.name %></span>
+    <span class="tag"><%= model.state_i18n %></span>
   </div>
   <p class="has-text-grey"><%= model.qr_code %></p>
 </td>
@@ -36,7 +37,7 @@
   <% model.vip_price.each do |key, value| %>
     <div class="tags has-addons control mb-0">
       <div class="tag is-success"><%= key %></div>
-      <div class="tag is-light"><%= value %></div>
+      <div class="tag is-light"><%= value.to_money.format(html_wrap: true).html_safe %></div>
     </div>
   <% end %>
   </div>
@@ -50,7 +51,6 @@
     <label data-action="click->input#check"></label>
   <% end %>
 </td>
-<td><%= model.state_i18n %></td>
 <td>
   <%= form_with theme: nil, model: model, url: { action: 'update', id: model.id }, data: { controller: 'input' } do |f| %>
     <%= f.check_box :enabled, data: { input_target: 'checkbox' }, id: nil, class: 'switch is-rounded' %>
