hidden edit button

--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -17,7 +17,7 @@
       </tr>
     <% end %>
   </table>
-  <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%= link_to({ action: 'edit', id: model.id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('factory.admin.productions.part.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-cube"></i>
   <% end %>
 </td>
@@ -28,7 +28,7 @@
 </td>
 <td>
   <%= model.price.to_money.format(html_wrap: true).html_safe %>
-  <%= link_to({ action: 'price', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
+  <%= link_to({ action: 'price', id: model.id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('.edit') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-dollar-sign"></i>
   <% end %>
 </td>
@@ -41,7 +41,7 @@
     </div>
   <% end %>
   </div>
-  <%= link_to({ action: 'vip', id: model.id }, data: { turbo_frame: 'modal' }, aria: { label: t('factory.admin.productions.vip.title') }, class: 'button is-small is-rounded is-light') do %>
+  <%= link_to({ action: 'vip', id: model.id }, data: { turbo_frame: 'modal', show_target: 'item' }, aria: { label: t('factory.admin.productions.vip.title') }, class: 'button is-small is-rounded is-light') do %>
     <i class="fa-light fa-star"></i>
   <% end %>
 </td>
