--- a/app/views/factory/in/trade_items/_index/_index_tfoot.html.erb
+++ b/app/views/factory/in/trade_items/_index/_index_tfoot.html.erb
@@ -1,7 +1,7 @@
 <tfoot>
   <tr>
     <th colspan="3"></th>
-    <th><%= @trade_items.sum(&:amount) %></th>
+    <th><%= @trade_items.sum(&->(i){ i.amount.to_d }) %></th>
     <th colspan="3"></th>
     <th id="payment_button">
       <%= button_to({ controller: 'payments', action: 'create', organ_id: params[:organ_id] }, class: 'button is-success') do %>
