--- a/app/views/factory/productions/_index/_tab_bar_cart.html.erb
+++ b/app/views/factory/productions/_index/_tab_bar_cart.html.erb
@@ -2,11 +2,11 @@
   <div class="level-left is-flex pl-4">
     <%= link_to({ controller: 'trade/my/carts', action: 'show', id: @cart.id }, class: 'level-item mb-0') do %>
       <i class="fa-solid fa-bag-shopping fa-2x fa-weui-badge">
-        <span class="weui-badge"><%= @cart.trade_items.count %></span>
+        <span class="weui-badge"><%= @cart.items.count %></span>
       </i>
     <% end %>
     <div class="level-item pl-4 is-align-items-baseline">
-      <%= @cart.amount.to_money.format(html_wrap: true).html_safe %>
+      <%= @cart.item_amount.to_money.format(html_wrap: true).html_safe %>
     </div>
   </div>
   <div class="level-right mt-0 pr-4">
