rename vip price to card price

--- a/app/views/factory/in/carts/_list/_production.html.erb
+++ b/app/views/factory/in/carts/_list/_production.html.erb
@@ -22,7 +22,7 @@
         <% current_cart.cards.each do |card| %>
         <div class="tags has-addons control m-0" style="display: inline-flex">
           <div class="tag is-success"><%= card.card_template.code %></div>
-          <div class="tag is-light"><%= model.vip_price.fetch(card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
+          <div class="tag is-light"><%= model.card_price.fetch(card.card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
         </div>
         <% end %>
       </div>
