--- a/app/views/factory/productions/_base/_production.html+phone.erb
+++ b/app/views/factory/productions/_base/_production.html+phone.erb
@@ -18,7 +18,7 @@
     </ul>
     <div class="is-flex is-align-items-center">
       <span class="has-text-danger"><%= model.price.to_money.format(html_wrap: true).html_safe %></span>
-      <% @card_templates.select(&->(i){ model.vip_price.keys.include?(i.code) }).each do |card_template| %>
+      <% @card_templates.select(&->(i){ model.card_price.keys.include?(i.code) }).each do |card_template| %>
         <div class="tags has-addons is-price control m-0 ml-2" style="display: inline-flex">
           <% if current_cart && current_cart.cards.map(&->(i){ i.card_template.code }).include?(card_template.code) %>
             <div class="tag is-danger">
@@ -28,7 +28,7 @@
           <% else %>
             <div class="tag is-success"><%= card_template.code %></div>
           <% end %>
-          <div class="tag is-light"><%= model.vip_price.fetch(card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
+          <div class="tag is-light"><%= model.card_price.fetch(card_template.code, model.price).to_money.format(html_wrap: true).html_safe %></div>
         </div>
       <% end %>
     </div>
