--- a/app/views/factory/admin/productions/_index/_index_tbody.html.erb
+++ b/app/views/factory/admin/productions/_index/_index_tbody.html.erb
@@ -34,7 +34,7 @@
 </td>
 <td>
   <div>
-  <% model.vip_price.each do |key, value| %>
+  <% model.card_price.each do |key, value| %>
     <div class="tags has-addons control mb-0">
       <div class="tag is-success"><%= key %></div>
       <div class="tag is-light"><%= value.to_money.format(html_wrap: true).html_safe %></div>
