--- a/app/views/factory/admin/productions/_vip_form.html.erb
+++ b/app/views/factory/admin/productions/_vip_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_with model: @production, url: { action: 'update_vip' } do |f| %>
   <%= render 'error_messages', target: f.object %>
   <% @card_templates.each do |card_template| %>
-    <%= f.fields :vip_price do |ef| %>
+    <%= f.fields :card_price do |ef| %>
       <%= ef.hidden_field :code, value: card_template.code, index: card_template.id %>
-      <%= ef.number_field :price, step: 0.01, value: @production.vip_price.fetch(card_template.code, @production.price), label: card_template.name, index: card_template.id %>
+      <%= ef.number_field :price, step: 0.01, value: @production.card_price.fetch(card_template.code, @production.price), label: card_template.name, index: card_template.id %>
     <% end %>
   <% end %>
   <%= f.submit %>
